ejemplos/codigo/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> term
Rule 3     term -> term TIMES factor
Rule 4     term -> factor
Rule 5     factor -> NUMBER
Rule 6     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

LPAREN               : 6
NUMBER               : 5
PLUS                 : 1
RPAREN               : 6
TIMES                : 3
error                : 

Nonterminals, with rules where they appear

expression           : 1 6 0
factor               : 3 4
term                 : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . factor
    (5) factor -> . NUMBER
    (6) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 5
    factor                         shift and go to state 4

state 1

    (2) expression -> term .
    (3) term -> term . TIMES factor

    RPAREN          reduce using rule 2 (expression -> term .)
    PLUS            reduce using rule 2 (expression -> term .)
    $end            reduce using rule 2 (expression -> term .)
    TIMES           shift and go to state 6


state 2

    (5) factor -> NUMBER .

    TIMES           reduce using rule 5 (factor -> NUMBER .)
    PLUS            reduce using rule 5 (factor -> NUMBER .)
    $end            reduce using rule 5 (factor -> NUMBER .)
    RPAREN          reduce using rule 5 (factor -> NUMBER .)


state 3

    (6) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . factor
    (5) factor -> . NUMBER
    (6) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 7
    factor                         shift and go to state 4

state 4

    (4) term -> factor .

    TIMES           reduce using rule 4 (term -> factor .)
    RPAREN          reduce using rule 4 (term -> factor .)
    PLUS            reduce using rule 4 (term -> factor .)
    $end            reduce using rule 4 (term -> factor .)


state 5

    (0) S' -> expression .
    (1) expression -> expression . PLUS term

    PLUS            shift and go to state 8


state 6

    (3) term -> term TIMES . factor
    (5) factor -> . NUMBER
    (6) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 9

state 7

    (6) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term

    RPAREN          shift and go to state 10
    PLUS            shift and go to state 8


state 8

    (1) expression -> expression PLUS . term
    (3) term -> . term TIMES factor
    (4) term -> . factor
    (5) factor -> . NUMBER
    (6) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 11
    factor                         shift and go to state 4

state 9

    (3) term -> term TIMES factor .

    TIMES           reduce using rule 3 (term -> term TIMES factor .)
    RPAREN          reduce using rule 3 (term -> term TIMES factor .)
    PLUS            reduce using rule 3 (term -> term TIMES factor .)
    $end            reduce using rule 3 (term -> term TIMES factor .)


state 10

    (6) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 6 (factor -> LPAREN expression RPAREN .)


state 11

    (1) expression -> expression PLUS term .
    (3) term -> term . TIMES factor

    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 6

